# ADOL-ROS-TRAINING

ros_simple_topic_example/: CMakeLists.txt  package.xml
ros_simple_topic_example/src/: ros_simple_topic_example_publisher.cpp  ros_simple_topic_example_subscriber.cpp
ros_tutorial_client/: CMakeLists.txt  package.xml
ros_tutorial_client/src/: client.cpp
ros_tutorial_msgs/: CMakeLists.txt  package.xml
ros_tutorial_msgs/msg/: IntString.msg
ros_tutorial_publisher/: CMakeLists.txt  package.xml
ros_tutorial_publisher/src/: publisher.cpp
ros_tutorial_server/: CMakeLists.txt  package.xml
ros_tutorial_server/src/: server.cpp
ros_tutorial_subscriber/: CMakeLists.txt  package.xml
ros_tutorial_subscriber/src/: subscriber.cpp
